<resources>
    <string name="app_name">Simple UI Catalog</string>

    <string name="add_item">Add Item</string>
    <string name="span_text_click">Span Text Click</string>
    <string name="simple_text_click">Simple Text Click</string>
    <string name="simple_button_click">Simple Button Click</string>
    <string name="email_button">Email Button</string>
    <string name="email_image">Email Image</string>
    <string name="basic_alert">Basic</string>
    <string name="basic_list_alert">Basic List</string>
    <string name="custom_list_alert">Custom List</string>
    <string name="androidx_alertdialog">AndroidX AlertDialog</string>
    <string name="built_in_alertdialog">Built-in AlertDialog</string>
    <string name="time_picker">Time Picker</string>
    <string name="date_picker">Date Picker</string>
    <string name="time_picker_frag">Time Picker Fragment</string>
    <string name="date_picker_frag">Date Picker Fragment</string>
    <string name="other_dialogs">Other Dialogs</string>
    <string name="edit_text_below">Edit Text Below</string>
    <string name="enter_some_text">Enter Some Text</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="name">Name</string>
    <string name="seekbar">SeekBar</string>
    <string name="slider">Slider</string>
    <string name="range_slider">Range Slider</string>
    <string name="toggle_me">Toggle Me</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
</resources>