<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:id="@+id/ll_screen_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <Button android:id="@+id/button_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:text="@string/simple_button_click" />

        <TextView android:id="@+id/text_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:gravity="center"
            android:text="@string/simple_text_click" />

        <TextView android:id="@+id/text_span"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:gravity="center"
            android:text="@string/span_text_click" />

        <ImageButton android:id="@+id/image_button_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:contentDescription="@string/email_button"
            android:src="@android:drawable/ic_dialog_email"
            android:scaleType="center"/>

        <ImageView android:id="@+id/image_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:contentDescription="@string/email_image"
            android:background="@color/teal_200"
            android:src="@android:drawable/ic_dialog_email"
            android:scaleType="center"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_item"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>